--- a/Model/requirements.txt
+++ b/Model/requirements.txt
@@ -11,7 +11,10 @@ packaging==26.0
 pandas==3.0.1
 pillow==12.1.1
 plotly==6.5.2
+pygame==2.6.1
 pyparsing==3.3.2
 python-dateutil==2.9.0.post0
+scipy==1.17.0
 six==1.17.0
 tzdata==2025.3
+websockets==16.0
